--- a/sass/parts/_footer.scss
+++ b/sass/parts/_footer.scss
@@ -45,47 +45,33 @@
         @media screen and (max-width: 991px) {
            max-width: 100%;
         }
-        form{
-            display: flex;
-            flex-direction: column;
-            label{
-                margin-bottom: 25px;
-            }
-            input{
-                width: 100%;
-                height: 45px;
-                padding: 10px 16px;
-                font-size: 18px;
-                border: none;
-                border-radius: 5px;
-                border: 1px solid #d9dce1;
-                &:focus{
-                    outline: none;
-                }
-                &::placeholder {
-                    color: #6a737d;
-                    opacity: 1;
-                }
-                
-                &:-ms-input-placeholder {
-                    color: #6a737d;
-                }
-                
-                &::-ms-input-placeholder { 
-                    color: #6a737d;
-                }
-            }
-
-            .button{
-                box-shadow: 5px 4px 14px #888;
-                min-width: 165px;
-            }
+        
+        &-title{
+            margin: 0;
+            font-family: $montserrat;
+            font-size: 18px;
+            font-weight: 600;
         }
 
         .form-title{
             font-size: 24px;
             font-weight: 600;
             margin-bottom: 35px;
+        }
+
+        .button{
+            margin-top: 20px;
+        }
+
+        .social-list{
+            margin-top: 50px;
+            padding: 0;
+            list-style: none;
+            display: flex;
+            align-items: center;
+            li{
+                margin: 0 10px;
+            }
         }
     }
 
