--- a/sass/widgets/_services.scss
+++ b/sass/widgets/_services.scss
@@ -1,5 +1,5 @@
 .services{
-    background: url('../../img/bg.png') 0px 0px no-repeat;
+    background: url('../img/bg.png') 0px 0px no-repeat;
     background-size: 102%;
     padding-top: 140px;
     padding-bottom: 0;
