fixed fonts, img

--- a/sass/widgets/_widget.scss
+++ b/sass/widgets/_widget.scss
@@ -61,9 +61,8 @@
         top: 0;
         left: 0;
         z-index: 1;
-        background: url(../../img/clients-bg.png) 0px 0px no-repeat;
+        background: url(../img/clients-bg.png) 0px 0px no-repeat;
         background-size: 100% 99%;
-
     }
 
     .container{
