--- a/sass/widgets/_inner-form.scss
+++ b/sass/widgets/_inner-form.scss
@@ -1,7 +1,9 @@
 .inner-form{
     background: #00bec0;
     margin-top: -50px;
-
+    @media screen and (max-width: 991px) {
+        margin-top: 0;
+    }
     .form{
         width: 100%;
         max-width: 750px;
