--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -317,8 +317,8 @@ body{
   font-size: 24px;
   cursor: pointer;
   text-align: center;
-  @media screen and (max-width: 991px) {
-    
+  @media screen and (max-width: 1199px) {
+    padding: 15px 20px;
   }
   &:hover{
       transition: all linear .2s;
