--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -9,6 +9,8 @@
     }
 
     .logo{
+        display: flex;
+        align-items: center;
         a{
             text-decoration: none;
         }
@@ -23,6 +25,24 @@
         padding: 15px 0 15px 30px;
         margin: 0 0 0 30px;
         border-left: 1px solid #00bec0;
+        @media screen and (min-width: 767px) {
+            br{
+                display: none;
+            }
+        }
+
+        @media screen and (max-width: 1199px) {
+            padding: 15px 0 15px 15px;
+            margin: 0 0 0 15px;
+        }
+
+        @media screen and (max-width: 767px) {
+            padding: 8px 0 9px 8px;
+            margin: 0 0 0 8px;
+            font-size: 12px;
+            line-height: 1.4;
+            display: inline-block;
+        }
 
     }
 
@@ -41,6 +61,9 @@
             margin: 0 0 0 25px;
             font-size: 16px;
             font-family: $nunito;
+            @media screen and (max-width: 1199px) {
+                margin: 0 0 0 10px;
+            }
             @media screen and (max-width: 991px) {
                 margin: 0;
             }
@@ -94,8 +117,8 @@
         }
        
         .line-1, .line-2, .line-3 {
-            width: 35px;
-            height: 5px;
+            width: 28px;
+            height: 3px;
             background-color: $primary-color;
             margin: 6px 0;
             transition: 0.4s;
@@ -103,13 +126,11 @@
 
           &.open{
             .line-1 {
-                -webkit-transform: rotate(-45deg) translate(-9px, 6px);
-                transform: rotate(-45deg) translate(-9px, 6px);
+                transform: rotate(-45deg) translate(-6px, 6px);
               }
               .line-2 {opacity: 0;}
               .line-3 {
-                -webkit-transform: rotate(45deg) translate(-8px, -8px);
-                transform: rotate(45deg) translate(-8px, -8px);
+                transform: rotate(45deg) translate(-6px, -8px);
               }
           }
 
