--- a/sass/widgets/_widget.scss
+++ b/sass/widgets/_widget.scss
@@ -53,6 +53,9 @@
 .clients{
     position: relative;
     z-index: 2;
+    @media screen and (max-width: 991px) {
+        background: #f1fbfb;
+    }
     &:after{
         content: '';
         position: absolute;
@@ -63,6 +66,9 @@
         z-index: 1;
         background: url(../img/clients-bg.png) 0px 0px no-repeat;
         background-size: 100% 99%;
+        @media screen and (max-width: 991px) {
+            display: none;
+        }
     }
 
     .container{
@@ -88,6 +94,17 @@
             justify-content: center;
             align-items: center;
             min-width: 195px;
+
+
+            @media screen and (max-width: 767px) {
+                min-width: auto;
+                max-width: calc(100% / 3 - 10px);
+                min-height: 90px;
+                margin: 0 5px 10px;
+                img{
+                    width: 100%;
+                }
+            }
         }
     }
     
@@ -96,6 +113,9 @@
 .text-img{
     .container{
         display: flex;
+        @media screen and (max-width: 991px) {
+            flex-direction: column;
+        }
     }
     .widget_title{
         text-align: left;
@@ -107,18 +127,40 @@
     .text{
         min-width: 720px;
         margin: 0 90px 0 0;
+        @media screen and (max-width: 1199px) {
+            min-width: 550px;
+        }
+        @media screen and (max-width: 767px) {
+            min-width: 100%;
+        }
         p{
             font-size: 24px;
+            @media screen and (max-width: 1199px) {
+                font-size: 18px;
+            }
+        }
+    }
+
+    .img{
+        @media screen and (max-width: 991px) {
+            margin-top: 20px;
+            img{
+                width: 100%;
+            }
         }
     }
 
     &.reverse{
-       .container{
-            flex-direction: row-reverse;
-        } 
-
-        .text{
-            margin: 0 0 0 90px;
+        @media screen and (min-width: 991px) {
+            .container{
+                flex-direction: row-reverse;
+               
+            } 
+    
+            .text{
+                margin: 0 0 0 90px;
+            }
         }
+       
     }
 }
