fixed inner pages

--- a/sass/base/_var.scss
+++ b/sass/base/_var.scss
@@ -17,7 +17,7 @@ $error: #ff0000;
 $success: #13c132;
 $primary-color-dark: #6400eb;
 $text-color: #192225;
-$action-color: #2fcb00;
+$action-color: #00bec0;
 $action-color-hover: #002ae4;
 $action-text-color: #fff;
 $second-color: #f5f5f5;
